add static library build method

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ LIBTOOL=libtool
 RM=rm -f
 OBJS=main.o
 DYNAMIC_LIBS=-L ../lib -Wl,-rpath,../lib -lsqlite3
+STATIC_LIBS=../lib/libsqlite3.a -lpthread -ldl
 INCLUDES=-I ../include
 
 all: dynamic-http-server
@@ -11,7 +12,7 @@ dynamic-http-server: main.o
 	$(CXX) -o http-server main.o $(DYNAMIC_LIBS)
 
 static-http-server: main.o
-	$(CXX) -o http-server main.o libsqlite3.a -lpthread -ldl
+	$(CXX) -o http-server main.o $(STATIC_LIBS)
 
 main.o: main.cc
 	$(CXX) -o main.o $(INCLUDES) -c main.cc
